Ros2_workspace/log/build_2022-05-12_19-20-15/nn_drone_final/stderr.log
  File "/home/xilinx/wrkspace/install/nn_drone_final/lib/python3.8/site-packages/nn_drone_final/nn_node.py", line 93
    time1() = time.time()
    ^
SyntaxError: cannot assign to function call

